--- a/test.ipynb
+++ b/test.ipynb
@@ -70,6 +70,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def connect_with_connector() -> psycopg2.extensions.connection:\n",
+    "    \"\"\"\n",
+    "    Initializes a connection for a Cloud SQL instance of Postgres using the Cloud SQL Python Connector\n",
+    "    and returns a psycopg2 connection instance.\n",
+    "    \"\"\"\n",
+    "    instance_connection_name = os.environ[\"INSTANCE_CONNECTION_NAME\"]  # e.g. 'project:region:instance'\n",
+    "    db_user = os.environ[\"DB_USER\"]  # e.g. 'my-db-user'\n",
+    "    db_pass = os.environ[\"DB_PASS\"]  # e.g. 'my-db-password'\n",
+    "    db_name = os.environ[\"DB_NAME\"]  # e.g. 'my-database'\n",
+    "\n",
+    "    ip_type = IPTypes.PRIVATE if os.environ.get(\n",
+    "        \"PRIVATE_IP\") else IPTypes.PUBLIC\n",
+    "\n",
+    "    # initialize Cloud SQL Python Connector object\n",
+    "    connector = Connector(refresh_strategy=\"LAZY\")\n",
+    "\n",
+    "    # Connect using psypg2 driver instead of pg8000 so that the returned connection matches that of connect_to_database()\n",
+    "    conn = connector.connect(\n",
+    "        instance_connection_name,\n",
+    "        \"psycopg2\",\n",
+    "        user=db_user,\n",
+    "        password=db_pass,\n",
+    "        db=db_name,\n",
+    "        ip_type=ip_type,\n",
+    "    )\n",
+    "    return conn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
