--- a/test.ipynb
+++ b/test.ipynb
@@ -121,7 +121,7 @@
     "    )\n",
     "    return genome_data.to_dict(orient='records')\n",
     "\n",
-    "df = verify_and_read_txt('AncestoryData.txt')\n",
+    "df = verify_and_read_txt('__AncestoryData.txt')\n",
     "df"
    ]
   },
