UP DOWN AND POPULATE FUKING WORKS! IT FUCCING WORKS!

--- a/fastapi_migration/database/sql_migration_manager.ipynb
+++ b/fastapi_migration/database/sql_migration_manager.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-13T16:22:39.223854Z",
-     "start_time": "2025-04-13T16:22:39.217904Z"
+     "end_time": "2025-04-13T18:06:29.759117Z",
+     "start_time": "2025-04-13T18:06:29.752918Z"
     }
    },
    "cell_type": "code",
@@ -35,13 +35,13 @@
    ],
    "id": "ed6926f26ae71554",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-13T16:22:39.257576Z",
-     "start_time": "2025-04-13T16:22:39.250559Z"
+     "end_time": "2025-04-13T18:06:30.461543Z",
+     "start_time": "2025-04-13T18:06:30.074093Z"
     }
    },
    "cell_type": "code",
@@ -74,13 +74,13 @@
    ],
    "id": "11522fc0b9c138e4",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-13T16:23:25.223646Z",
-     "start_time": "2025-04-13T16:22:39.275142Z"
+     "end_time": "2025-04-13T18:07:19.039639Z",
+     "start_time": "2025-04-13T18:06:30.548197Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,7 @@
     "    db_config = yaml.load(f, Loader=yaml.FullLoader)\n",
     "data_path = '/Users/greysonnewton/projects/Untitled/zando/fastapi_migration/database/data/production'\n",
     "for table_name, table_query in table_query_dict.items():\n",
-    "    row_list = run_sql_query(db_config['production'],'Select * from characteristic_condition_link;')\n",
+    "    row_list = run_sql_query(db_config['production'],table_query)\n",
     "    table_df = pd.DataFrame(row_list)\n",
     "    table_df.to_csv(f'{data_path}/{table_name}.csv', index=False)\n",
     "\n"
@@ -103,59 +103,59 @@
      "output_type": "stream",
      "text": [
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10f9fbdd0>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x124c909d0>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10f45b930>, 327672.296773166), (<aiohttp.client_proto.ResponseHandler object at 0x10f45b850>, 327672.34796425)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10a2ac190>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124b53b60>, 333906.997793291), (<aiohttp.client_proto.ResponseHandler object at 0x124b53a80>, 333907.190167083)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x124c90990>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa5cc50>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x124ca4dd0>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10f45bd20>, 327674.586429208), (<aiohttp.client_proto.ResponseHandler object at 0x10f45b850>, 327674.780100625)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa5dad0>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb8360>, 333912.1892295), (<aiohttp.client_proto.ResponseHandler object at 0x124cb84b0>, 333912.232387458)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x124ca4810>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa1af50>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x124cbe690>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10f45bf50>, 327676.918561041), (<aiohttp.client_proto.ResponseHandler object at 0x10fa90050>, 327677.13970375)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa1abd0>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb8670>, 333917.188307125), (<aiohttp.client_proto.ResponseHandler object at 0x124cb87c0>, 333917.229211)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x124cbfd50>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa12690>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x124cc3f10>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa90130>, 327681.709297125), (<aiohttp.client_proto.ResponseHandler object at 0x10fa90600>, 327682.004811416)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa10c50>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb8830>, 333919.50478675), (<aiohttp.client_proto.ResponseHandler object at 0x124cb83d0>, 333919.675650125)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x124cc3e50>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa77550>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x12500e450>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa908a0>, 327686.717624791), (<aiohttp.client_proto.ResponseHandler object at 0x10fa907c0>, 327686.750834833)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa77490>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb9a90>, 333921.996644666), (<aiohttp.client_proto.ResponseHandler object at 0x124cb9b70>, 333922.105359291)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x12500e390>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fab4790>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x12500cc90>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa90f30>, 327691.246009375), (<aiohttp.client_proto.ResponseHandler object at 0x10fa91010>, 327691.3276275)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fab5f50>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cba350>, 333927.22537925), (<aiohttp.client_proto.ResponseHandler object at 0x124cba190>, 333927.225873375)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x12500ce10>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa1b450>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x124c5ff50>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa90d00>, 327696.0364295), (<aiohttp.client_proto.ResponseHandler object at 0x10fa916a0>, 327696.037300125)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa19890>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb9710>, 333924.500835625), (<aiohttp.client_proto.ResponseHandler object at 0x124cb9b70>, 333924.585511041)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x124c5fdd0>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa72a10>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x124ca7ad0>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa91630>, 327700.70093675), (<aiohttp.client_proto.ResponseHandler object at 0x10fa916a0>, 327700.780836208)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa71810>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb9e10>, 333932.002271083), (<aiohttp.client_proto.ResponseHandler object at 0x124cba4a0>, 333932.11838825)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x124c92750>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10fa73150>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x125016490>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa90590>, 327705.66361475), (<aiohttp.client_proto.ResponseHandler object at 0x10fa92660>, 327705.665033291)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10fa73790>\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb8830>, 333936.979407541), (<aiohttp.client_proto.ResponseHandler object at 0x124cba350>, 333937.172919875)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x1250164d0>\n",
       "Unclosed client session\n",
-      "client_session: <aiohttp.client.ClientSession object at 0x10facb6d0>\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x12503cbd0>\n",
       "Unclosed connector\n",
-      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x10fa92660>, 327710.274188541), (<aiohttp.client_proto.ResponseHandler object at 0x10fa91010>, 327710.299599041)])']\n",
-      "connector: <aiohttp.connector.TCPConnector object at 0x10facadd0>\n"
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x124cb9470>, 333941.872111583), (<aiohttp.client_proto.ResponseHandler object at 0x124cb87c0>, 333941.913902208)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x12503c710>\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 3
   },
   {
    "metadata": {
